--- a/public/css/main.css
+++ b/public/css/main.css
@@ -49,6 +49,7 @@ hr.landing_page_underline {
     width: 43%;
     margin-bottom: 4%;
 }
+
 .cute_food {
  	width: 175%;
 }
@@ -78,6 +79,7 @@ hr.landing_page_underline {
     margin-left: -72%;
     margin-top: 1%;
 }
+
 #USDA_link {
 	color: #616163;
 	text-shadow: 2px 1px 0px #84f6ff;
@@ -86,7 +88,7 @@ hr.landing_page_underline {
 	font-size: 1.2em;
 }
 
-/*_______________________________________________________________________*/
+
 .parallax-container.xsmall {
 	height: 15px;
 }
@@ -114,6 +116,7 @@ hr.landing_page_underline {
     padding-left: 11%;
     padding-right: 15%;
 }
+
 button.btn {
 	background-color: #ffbfa0;
     font-family: 'Quicksand', sans-serif;
@@ -130,11 +133,7 @@ button.btn:hover {
 button.btn:active {
 	background-color: #ff9765;
 }
-.modal{
-  width:95%;
-	max-height: 90%;
-	top: 4%;
-}
+
 footer.page-footer {
 	margin-top: 0;
 	background-color: #ffbfa0;
@@ -142,7 +141,6 @@ footer.page-footer {
  }
 
  /*_JS COMPARE ____________________________________________________________*/
-
 #js_compare {
 	display: none;
 	margin-top: 5%;
@@ -153,53 +151,21 @@ footer.page-footer {
 .bordered {		
 	width: 100%;
 }
+
 .nutrient_category {
 	font-family:'Quicksand', sans-serif;
 }
-.item1_heading {
-	
-}
+
 .collection .collection-item {
 	width: 94%;
 	font-family: 'Maitree', serif;
     color: #616163;
 }
+
 input#input-primary {
 	font-family: 'Maitree', serif;
 }
 
- /*_MODAL FORMATING________________________________________________________*/
-.modal-content {
-	background-color: #E0FFFF;
-	font-family: 'Maitree', serif;
-	font-weight: 200;
-	color: #616163;
-}
-.how_does {
-	background-color: rgba(135,246,255,0.8);
-	padding: 1%;
-	margin-top: 2%;
-	border-radius: 14px;
-	margin-bottom: 3%;
-}
-.modal-content h4 {
-	margin-left: 2%;
-	margin-top: 2%;
-	display: inline-block;
-}
-.modal-content p {
-	display: inline-block;
-	margin-left: 2%;
-	margin-top: -11px;
-	margin-bottom: 1%;
-	font-size: 121%;
-	font-family: 'Quicksand', sans-serif;
-}
-.modal-content ol {
-	margin-left: 3%;
-	margin-top: 2%;
-  line-height: 176%;
-}
 hr {
 	display: block;
 	margin-top: 0.5em;
@@ -210,50 +176,27 @@ hr {
 	border-width: 4px;
 	border-color: #ffbfa0;
 }
-.numberItem{
-	font-weight: 900;
-	font-size: 120%;
-	color: #ffbfa0;
-	margin:1%;
-}
-.btn2 {
-	width: 100%;
-	background-color: #44FFD2;
-	margin-top: 3%;
-	margin-bottom: 3%;
-	font-family: 'Quicksand', sans-serif;
-	font-size: 183%;
-	font-weight: bold;
-	text-transform: lowercase;
-	letter-spacing: 1.25px;
-	letter-spacing: 1.5px;
-	padding-top: 2.5%;
-	padding-bottom: 2.5%;
-	color: #616163;
-	border-radius: 4px;
-	border-width: 1px;
-}
-.fa fa-search {
-	display: inline-block;
-}
+
 #input-div {
 	display: inline-block;
 	font-family: 'Maitree', serif;
-	width: 89%;
+	width: 88%;
 }
 .fa.fa-search.fa-2x {
   font-size: 1.3em;
 }
+
 .search_button {
 	background: transparent;
 	border: none;
 	position: relative;
-  right:5%
+  	right:5%
 }
 .search_button:hover {
 	color: #616163;
     text-shadow: 1px 1px #84f6ff;
 }
+
 .list-group-item{
 	background-color: white;
 	color: #616163;
@@ -263,7 +206,6 @@ hr {
 	overflow: hidden;
 	width: 100%;
 }
-
 .list-group-item:hover{
 	background-color: #87F6FF;
 	color: #616163;
@@ -278,42 +220,6 @@ hr {
 	font-size: 100%;
 }
 
-/*.list-group-item:nth-of-type(odd) {
-	background-color: #44FFD2;
-	color: #616163;
-	font-family: 'Quicksand';
-	text-transform: lowercase;
-	letter-spacing: 1.25px;
-	overflow: hidden;
-	width: 100%;
-}
-.list-group-item:nth-of-type(odd):hover{
-	background-color: rgb(197, 153, 106);
-	color: #616163;
-	font-family: 'Quicksand';
-	text-transform: lowercase;
-	letter-spacing: 1.25px;
-	overflow: hidden;
-	width: 100%;
-}
-.list-group-item:nth-of-type(even){
-	background-color: #87F6FF;
-	color: #616163;
-	font-family: 'Quicksand';
-	text-transform: lowercase;
-	letter-spacing: 1.25px;
-	overflow: hidden;
-	width: 100%;
-}
-.list-group-item:nth-of-type(even):hover{
-	background-color: rgb(213, 210, 212);
-	color: #616163;
-	font-family: 'Quicksand';
-	text-transform: lowercase;
-	letter-spacing: 1.25px;
-	overflow: hidden;
-	width: 100%;
-}*/
 #panel_heading{
 	background-color: #FFBFA0;
 	color: white;
@@ -339,7 +245,7 @@ thead tr {
 	background-color: #E0FFFF;
 }
 
-/*_LANDING PAGE MEDIA QUERIES________________________________________________________*/
+/*_LANDING PAGE MEDIA QUERIES PORTRAIT_______________________________________________________*/
 @media screen and (max-width:767px) {
 	/*.section.a {
 		width: 100%;
@@ -416,11 +322,12 @@ thead tr {
     	font-size: 1em;
     }
     #js_compare {
-    	margin-top: 11%;
 	    text-align: center;
 	    border: 5px solid black;
 	    padding: 4%;
 	    width: 104%;
+	    margin-top: 11%;
+    	margin-left: -1.5%;
     }
     tbody {
     	font-size: 0.7em;
@@ -446,12 +353,40 @@ thead tr {
  		font-size: 148%;
  		padding-top: 4.25%;
  		height: 55px;
- 		width: 90vw;
+ 		width: 100%;
  	}
  	.grey-text.text-lighten-4 {
     	margin-top: 1%;
     	font-size: 0.9em;
     }
+}
+
+/*_LANDING PAGE MEDIA QUERIES LANDSCAPE___________________________________________________*/
+
+/*small devices*/
+@media screen 
+  and (min-device-width: 320px), 
+  and (max-device-width: 568px),
+  and (-webkit-min-device-pixel-ratio: 2) {
+  	button.btn {
+  		width: 25%;
+    	margin-left: 38%;
+  	}
+  	.section.c {
+    	width: 100%;
+    	height: 100%;
+	}
+}
+/*medium devices*/
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) { 
+  	#input-div {
+    	width: 87%;
+	}
+
 }
 
 
